--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           <ul class="list features">
             <li class="features-elements">
               <div class="icon-div">
-                <svg class="icon icon-antenna-1">
-                  <use xlink:href="symbol-defs.svg#icon-antenna-1"></use>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="highlights-c features-highlight">Strategy</h3>
@@ -81,8 +81,8 @@
             </li>
             <li class="features-elements">
               <div class="icon-div">
-                <svg class="icon icon-clock-1">
-                  <use xlink:href="symbol-defs.svg#icon-clock-1"></use>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="highlights-c features-highlight">Punctuality</h3>
@@ -93,8 +93,8 @@
             </li>
             <li class="features-elements">
               <div class="icon-div">
-                <svg class="icon icon-diagram-1">
-                  <use xlink:href="symbol-defs.svg#icon-diagram-1"></use>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="highlights-c features-highlight">Diligence</h3>
@@ -105,8 +105,8 @@
             </li>
             <li class="features-elements">
               <div class="icon-div">
-                <svg class="icon icon-astronaut-1">
-                  <use xlink:href="symbol-defs.svg#icon-astronaut-1"></use>
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="highlights-c features-highlight">Technologies</h3>
@@ -163,20 +163,36 @@
               <div class="name">
                 <h3 class="highlights-c name-highlight">Mark Guerrero</h3>
                 <p class="strategy">Product Designer</p>
-                <div class="icon-logo-div">
-                  <svg class="icon-logo icon-instagram-2">
-                    <use xlink:href="symbol-defs.svg#icon-instagram-2"></use>
-                  </svg>
-                  <svg class="icon-logo icon-twitter-1">
-                    <use xlink:href="symbol-defs.svg#icon-twitter-1"></use>
-                  </svg>
-                  <svg class="icon-logo icon-facebook-1">
-                    <use xlink:href="symbol-defs.svg#icon-facebook-1"></use>
-                  </svg>
-                  <svg class="icon-logo icon-linkedin-1">
-                    <use xlink:href="symbol-defs.svg#icon-linkedin-1"></use>
-                  </svg>
-                </div>
+                <ul class="icon-logo-ul">
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="characters">
@@ -189,20 +205,36 @@
               <div class="name">
                 <h3 class="highlights-c name-highlight">Tom Ford</h3>
                 <p class="strategy">Frontend Developer</p>
-                <div class="icon-logo-div">
-                  <svg class="icon-logo icon-instagram-2">
-                    <use xlink:href="symbol-defs.svg#icon-instagram-2"></use>
-                  </svg>
-                  <svg class="icon-logo icon-twitter-1">
-                    <use xlink:href="symbol-defs.svg#icon-twitter-1"></use>
-                  </svg>
-                  <svg class="icon-logo icon-facebook-1">
-                    <use xlink:href="symbol-defs.svg#icon-facebook-1"></use>
-                  </svg>
-                  <svg class="icon-logo icon-linkedin-1">
-                    <use xlink:href="symbol-defs.svg#icon-linkedin-1"></use>
-                  </svg>
-                </div>
+                <ul class="icon-logo-ul">
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="characters">
@@ -215,20 +247,36 @@
               <div class="name">
                 <h3 class="highlights-c name-highlight">Camila Garcia</h3>
                 <p class="strategy">Marketing</p>
-                <div class="icon-logo-div">
-                  <svg class="icon-logo icon-instagram-2">
-                    <use xlink:href="symbol-defs.svg#icon-instagram-2"></use>
-                  </svg>
-                  <svg class="icon-logo icon-twitter-1">
-                    <use xlink:href="symbol-defs.svg#icon-twitter-1"></use>
-                  </svg>
-                  <svg class="icon-logo icon-facebook-1">
-                    <use xlink:href="symbol-defs.svg#icon-facebook-1"></use>
-                  </svg>
-                  <svg class="icon-logo icon-linkedin-1">
-                    <use xlink:href="symbol-defs.svg#icon-linkedin-1"></use>
-                  </svg>
-                </div>
+                <ul class="icon-logo-ul">
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="characters">
@@ -241,20 +289,36 @@
               <div class="name">
                 <h3 class="highlights-c name-highlight">Daniel Wilson</h3>
                 <p class="strategy">UI Designer</p>
-                <div class="icon-logo-div">
-                  <svg class="icon-logo icon-instagram-2">
-                    <use xlink:href="symbol-defs.svg#icon-instagram-2"></use>
-                  </svg>
-                  <svg class="icon-logo icon-twitter-1">
-                    <use xlink:href="symbol-defs.svg#icon-twitter-1"></use>
-                  </svg>
-                  <svg class="icon-logo icon-facebook-1">
-                    <use xlink:href="symbol-defs.svg#icon-facebook-1"></use>
-                  </svg>
-                  <svg class="icon-logo icon-linkedin-1">
-                    <use xlink:href="symbol-defs.svg#icon-linkedin-1"></use>
-                  </svg>
-                </div>
+                <ul class="icon-logo-ul">
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logo-element">
+                    <a class="icon-link" href="">
+                      <svg class="icon-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -263,44 +327,56 @@
       <section class="customers">
         <div class="container">
           <h2 class="customers-highlight">Customers</h2>
-          <div class="customer-div">
-            <div class="icon-customers-div">
-              <svg class="icon-customers icon-Logo">
-                <use xlink:href="symbol-defs.svg#icon-Logo"></use>
-              </svg>
-            </div>
-            <div class="icon-customers-div">
-              <svg class="icon-customers icon-Logo-1">
-                <use xlink:href="symbol-defs.svg#icon-Logo-1"></use>
-              </svg>
-            </div>
-            <div class="icon-customers-div">
-              <svg class="icon-customers icon-Logo4">
-                <use xlink:href="symbol-defs.svg#icon-Logo4"></use>
-              </svg>
-            </div>
-            <div class="icon-customers-div">
-              <svg class="icon-customers icon-Logo1">
-                <use xlink:href="symbol-defs.svg#icon-Logo1"></use>
-              </svg>
-            </div>
-            <div class="icon-customers-div">
-              <svg class="icon-customers icon-Logo5">
-                <use xlink:href="symbol-defs.svg#icon-Logo5"></use>
-              </svg>
-            </div>
-            <div class="icon-customers-div">
-              <svg class="icon-customers icon-Logo6">
-                <use xlink:href="symbol-defs.svg#icon-Logo6"></use>
-              </svg>
-            </div>
-          </div>
+          <ul class="icon-customers-ul">
+            <li class="customer-element">
+              <a class="customers-link" href="">
+                <svg class="icon-customers icon-Logo" width="104" height="56">
+                  <use xlink:href="symbol-defs.svg#icon-Logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-element">
+              <a class="customers-link" href="">
+                <svg class="icon-customers icon-Logo-1" width="104" height="56">
+                  <use xlink:href="symbol-defs.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-element">
+              <a class="customers-link" href="">
+                <svg class="icon-customers icon-Logo4" width="104" height="56">
+                  <use xlink:href="symbol-defs.svg#icon-Logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-element">
+              <a class="customers-link" href="">
+                <svg class="icon-customers icon-Logo1" width="104" height="56">
+                  <use xlink:href="symbol-defs.svg#icon-Logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-element">
+              <a class="customers-link" href="">
+                <svg class="icon-customers icon-Logo5" width="104" height="56">
+                  <use xlink:href="symbol-defs.svg#icon-Logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customer-element">
+              <a class="customers-link" href="">
+                <svg class="icon-customers icon-Logo6" width="104" height="56">
+                  <use xlink:href="symbol-defs.svg#icon-Logo6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
     <footer class="footer-index">
       <div class="container footer-div">
-        <div>
+        <div class="logo-div">
           <a href="./index.html" class="footer-link logo link"
             >Web<span class="studio-bottom">Studio</span></a
           >
@@ -311,20 +387,36 @@
         </div>
         <div class="social">
           <p class="social-media-paragraph">Social media</p>
-          <div class="icon-social-div">
-            <svg class="icon-social icon-instagram-2">
-              <use xlink:href="symbol-defs.svg#icon-instagram-2"></use>
-            </svg>
-            <svg class="icon-social icon-twitter-1">
-              <use xlink:href="symbol-defs.svg#icon-twitter-1"></use>
-            </svg>
-            <svg class="icon-social icon-facebook-1">
-              <use xlink:href="symbol-defs.svg#icon-facebook-1"></use>
-            </svg>
-            <svg class="icon-social icon-linkedin-1">
-              <use xlink:href="symbol-defs.svg#icon-linkedin-1"></use>
-            </svg>
-          </div>
+          <ul class="icon-social-ul">
+            <li class="logo-element">
+              <a class="social-link" href="">
+                <svg class="icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="logo-element">
+              <a class="social-link" href="">
+                <svg class="icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="logo-element">
+              <a class="social-link" href="">
+                <svg class="icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="logo-element">
+              <a class="social-link" href="">
+                <svg class="icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
