--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
           </ul>
           <ul class="list offer">
             <li class="offer-list">
-              <a href="" class="link">
+              <a href="" class="link offer-link">
                 <img
                   src="./images/fioletowy-design.jpg"
                   alt="purple pictures"
@@ -80,7 +80,7 @@
               >
             </li>
             <li class="offer-list">
-              <a href="" class="link">
+              <a href="" class="link offer-link">
                 <img
                   src="./images/telefon.jpg"
                   alt="payment"
@@ -95,7 +95,7 @@
             </li>
 
             <li class="offer-list">
-              <a href="" class="link">
+              <a href="" class="link offer-link">
                 <img
                   src="./images/ekran.jpg"
                   alt="computer screen"
@@ -109,7 +109,7 @@
               >
             </li>
             <li class="offer-list">
-              <a href="" class="link">
+              <a href="" class="link offer-link">
                 <img
                   src="./images/kierownica.jpg"
                   alt="hand on a steering wheel"
@@ -123,7 +123,7 @@
               >
             </li>
             <li class="offer-list">
-              <a href="" class="link">
+              <a href="" class="link offer-link">
                 <img
                   src="./images/smartfon.jpg"
                   alt="smartphone screen"
@@ -137,7 +137,7 @@
               >
             </li>
             <li class="offer-list">
-              <a href="" class="link">
+              <a href="" class="link offer-link">
                 <img
                   src="./images/kobieta2.jpg"
                   alt="woman"
@@ -151,7 +151,7 @@
               >
             </li>
             <li class="offer-list">
-              <a href="" class="link">
+              <a href="" class="link offer-link">
                 <img
                   src="./images/kolaz.jpg"
                   alt="compilation of various pictures"
@@ -165,7 +165,7 @@
               >
             </li>
             <li class="offer-list">
-              <a href="" class="link">
+              <a href="" class="link offer-link">
                 <img
                   src="./images/natura.jpg"
                   alt="a woman carries gloceries through the park"
@@ -179,7 +179,7 @@
               >
             </li>
             <li class="offer-list">
-              <a href="" class="link">
+              <a href="" class="link offer-link">
                 <img
                   src="./images/kawa.jpg"
                   alt="coffee"
