--- a/portfolio.html
+++ b/portfolio.html
@@ -197,14 +197,49 @@
       </section>
     </main>
     <footer class="footer-index">
-      <div class="container">
-        <a href="./index.html" class="footer-link logo link"
-          >Web<span class="studio-bottom">Studio</span></a
-        >
-        <p class="footer-p">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-div">
+        <div class="logo-div">
+          <a href="./index.html" class="footer-link logo link"
+            >Web<span class="studio-bottom">Studio</span></a
+          >
+          <p class="footer-p">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social">
+          <p class="social-media-paragraph">Social media</p>
+          <ul class="icon-social-ul">
+            <li class="logo-element">
+              <a class="social-link" href="">
+                <svg class="icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="logo-element">
+              <a class="social-link" href="">
+                <svg class="icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="logo-element">
+              <a class="social-link" href="">
+                <svg class="icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="logo-element">
+              <a class="social-link" href="">
+                <svg class="icon-logo" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
