--- a/index.html
+++ b/index.html
@@ -330,42 +330,42 @@
           <ul class="icon-customers-ul">
             <li class="customer-element">
               <a class="customers-link" href="">
-                <svg class="icon-customers icon-Logo" width="104" height="56">
+                <svg class="icon-customers" width="104" height="56">
                   <use xlink:href="symbol-defs.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-element">
               <a class="customers-link" href="">
-                <svg class="icon-customers icon-Logo-1" width="104" height="56">
-                  <use xlink:href="symbol-defs.svg#icon-Logo-1"></use>
+                <svg class="icon-customers" width="104" height="56">
+                  <use xlink:href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-element">
               <a class="customers-link" href="">
-                <svg class="icon-customers icon-Logo4" width="104" height="56">
-                  <use xlink:href="symbol-defs.svg#icon-Logo4"></use>
+                <svg class="icon-customers" width="104" height="56">
+                  <use xlink:href="./images/icons.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-element">
               <a class="customers-link" href="">
-                <svg class="icon-customers icon-Logo1" width="104" height="56">
-                  <use xlink:href="symbol-defs.svg#icon-Logo1"></use>
+                <svg class="icon-customers" width="104" height="56">
+                  <use xlink:href="./images/icons.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-element">
               <a class="customers-link" href="">
-                <svg class="icon-customers icon-Logo5" width="104" height="56">
-                  <use xlink:href="symbol-defs.svg#icon-Logo5"></use>
+                <svg class="icon-customers" width="104" height="56">
+                  <use xlink:href="./images/icons.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-element">
               <a class="customers-link" href="">
-                <svg class="icon-customers icon-Logo6" width="104" height="56">
+                <svg class="icon-customers" width="104" height="56">
                   <use xlink:href="symbol-defs.svg#icon-Logo6"></use>
                 </svg>
               </a>
