--- a/index.html
+++ b/index.html
@@ -338,35 +338,35 @@
             <li class="customer-element">
               <a class="customers-link" href="">
                 <svg class="icon-customers" width="104" height="56">
-                  <use xlink:href="./images/icons.svg#icon-Logo-1"></use>
+                  <use href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-element">
               <a class="customers-link" href="">
                 <svg class="icon-customers" width="104" height="56">
-                  <use xlink:href="./images/icons.svg#icon-Logo4"></use>
+                  <use href="./images/icons.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-element">
               <a class="customers-link" href="">
                 <svg class="icon-customers" width="104" height="56">
-                  <use xlink:href="./images/icons.svg#icon-Logo1"></use>
+                  <use href="./images/icons.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-element">
               <a class="customers-link" href="">
                 <svg class="icon-customers" width="104" height="56">
-                  <use xlink:href="./images/icons.svg#icon-Logo5"></use>
+                  <use href="./images/icons.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="customer-element">
               <a class="customers-link" href="">
                 <svg class="icon-customers" width="104" height="56">
-                  <use xlink:href="symbol-defs.svg#icon-Logo6"></use>
+                  <use href="symbol-defs.svg#icon-Logo6"></use>
                 </svg>
               </a>
             </li>
