--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <li class="customer-element">
               <a class="customers-link" href="">
                 <svg class="icon-customers" width="104" height="56">
-                  <use xlink:href="symbol-defs.svg#icon-Logo"></use>
+                  <use href="./images/icons.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
@@ -366,7 +366,7 @@
             <li class="customer-element">
               <a class="customers-link" href="">
                 <svg class="icon-customers" width="104" height="56">
-                  <use href="symbol-defs.svg#icon-Logo6"></use>
+                  <use href="./images/icons.svg#icon-Logo6"></use>
                 </svg>
               </a>
             </li>
