--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
 
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+
     <title>Moja strona</title>
   </head>
   <body>
@@ -390,28 +391,28 @@
           <ul class="icon-social-ul">
             <li class="logo-element">
               <a class="social-link" href="">
-                <svg class="icon-logo" width="24" height="24">
+                <svg class="icon-logo footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-element">
               <a class="social-link" href="">
-                <svg class="icon-logo" width="24" height="24">
+                <svg class="icon-logo footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-element">
               <a class="social-link" href="">
-                <svg class="icon-logo" width="24" height="24">
+                <svg class="icon-logo footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-element">
               <a class="social-link" href="">
-                <svg class="icon-logo" width="24" height="24">
+                <svg class="icon-logo footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
