--- a/portfolio.html
+++ b/portfolio.html
@@ -212,28 +212,28 @@
           <ul class="icon-social-ul">
             <li class="logo-element">
               <a class="social-link" href="">
-                <svg class="icon-logo" width="24" height="24">
+                <svg class="icon-logo footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-element">
               <a class="social-link" href="">
-                <svg class="icon-logo" width="24" height="24">
+                <svg class="icon-logo footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-element">
               <a class="social-link" href="">
-                <svg class="icon-logo" width="24" height="24">
+                <svg class="icon-logo footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="logo-element">
               <a class="social-link" href="">
-                <svg class="icon-logo" width="24" height="24">
+                <svg class="icon-logo footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
